HW7: Fix endpoints prefixes.
